hold-core-nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hold-core-nginx-svc
spec:
  ports:
  - port: 5000
    targetPort: 30001
    protocol: TCP
    name: http
  selector:
    app: app
