hold-pg-db-nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hold-pg-db-nginx-svc
spec:
  ports:
  - port: 5432
    targetPort: 30002
    protocol: TCP
    name: http
  selector:
    app: db
